--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "dotenv": "^8.6.0",
+    "express": "^4.19.2",
+    "mongodb": "^6.6.1",
+    "urlparser": "^0.3.9"
   },
   "license": "MIT"
 }
